data/all_generated_tests/raw_wast_tests/br_table_ImproperFunctionCallorReturnHandling_2417.wast
;; 7. **Test of Connecting Function Calls with Loop Constructs via br_table**:     - Create a function that is called within a loop, with loop control transitions directed by `br_table`.    - *Constraint*: Ensure loop constructs and their flow controls interact correctly with function calls.    - *Relation to Improper Function Call or Return Handling*: Ensures that function call handling does not interfere with loop control via `br_table`, maintaining separation of concerns.

(assert_invalid
  (module
    (func $call-in-loop-with-br_table
      (block
        (loop
          (call $some_function)
          (i32.const 0)
          (br_table 0 1 (i32.const 1))
        )
      )
    )
    (func $some_function (result i32)
      ;; Function implementation
      (i32.const 10)
    )
  )
  "type mismatch"
)